<resources>
    <string name="app_name">My Firestore</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="update_description">Update Description</string>
    <string name="delete_description">Delete Description</string>
    <string name="delete_document">delete document</string>
</resources>
